ecmascript/parser/tests/typescript-errors/deno-10112/case2/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/deno-10112/case2/input.ts:1:8
  |
1 | try { }
  |        ^

